[package]
name = "gossip-glomers-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maelstrom-node = "0.1.6"
async-trait = "0.1.51"
uuid = { version = "1.9.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde_json = "1.0.70"
tokio = { version = "1.10.1", features = ["full"] }

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "unique_id"
path = "src/bin/unique_id.rs"

[[bin]]
name = "single_node_broadcast"
path = "src/bin/single_node_broadcast.rs"
