[package]
name = "gossip-glomers-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maelstrom-node = "0.1.6"
async-trait = "0.1.51"
uuid = { version = "1.9.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
tokio = { version = "1.10.1", features = ["full"] }
tokio-context = "0.1.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
tracing = "0.1.26"
tracing-subscriber = "0.3"
chrono = "0.4"

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "unique_id"
path = "src/bin/unique_id.rs"

[[bin]]
name = "broadcast"
path = "src/bin/broadcast.rs"
